...
    }()
    
    override func viewDidLoad() {
        super.viewDidLoad()
        
        self.view.backgroundColor = .white
        view.accessibilityIdentifier = "MoviesViewController"
        self.view.showBlurLoader()
        presenter?.viewDidLoad()
    }
    
    private func setupEmpty() {
        self.view.addSubview(emptyLabel)
...
