...
    
    private lazy var segmented: UISegmentedControl = {
        let segmentedControl = UISegmentedControl(items: items)
        segmentedControl.frame = CGRect(x: 35, y: 200, width: 250, height: 50)
        segmentedControl.addTarget(self, action: #selector(segmentAction(_:)), for: .valueChanged)
        segmentedControl.selectedSegmentIndex = 0
        segmentedControl.accessibilityIdentifier = "segmentControl"
        return segmentedControl
    }()
    
    private lazy var filterButton: UIButton = {
        let button = UIButton()
        button.setTitle(Strings.Home.FilterShow, for: .normal)
...
